# wessley-services

./: .gitignore  batch_ocr_test.py  hybrid_knowledge_store.py  intelligent_metadata_extractor.py  master_pipeline.py  ollama_spatial_placer.py  process_existing_ocr.py  tesseract_ocr.py
3d-model-service/: .env.development  .env.example  .env.production  Dockerfile  README.md  SERVICE_ARCHITECTURE.md  TEST_SUMMARY.md  docker-compose.yml  env.example  package-lock.json  package.json  vitest.config.ts  vitest.integration.config.ts
3d-model-service/output/: model_1760966166278_metadata.json  pajero_pinin_2001_1760966166277.glb
3d-model-service/scripts/: add-vehicle-signatures.js  complete-graphml-import.js  data-comparison.js  import-demo-data.js  import-graphml.js  safe-spatial-update.js
3d-model-service/src/: app.module.ts  main.ts
3d-model-service/src/common/dto/: model-generation.dto.ts
3d-model-service/src/common/entities/: component.entity.ts
3d-model-service/src/common/interfaces/: i3d-engine.interface.ts
3d-model-service/src/config/: configuration.ts
3d-model-service/src/controllers/: jobs.controller.ts
3d-model-service/src/guards/: auth.guard.ts
3d-model-service/src/health/: health.module.ts
3d-model-service/src/modules/export/: export.module.ts
3d-model-service/src/modules/geometry/: component-factory.service.ts  geometry.module.ts  material.service.ts  scene-composer.service.ts  wire-factory.service.ts
3d-model-service/supabase/: schema.sql
3d-model-service/test/: setup.ts
3d-model-service/test/fixtures/: test-data.ts
3d-model-service/test/integration/: graph.service.test.ts  setup.ts
docs/: ARCHITECTURE.md  PIPELINE_GUIDE.md  SPATIAL_PLACEMENT.md
graph-service/: ARCHITECTURE.md  Dockerfile  README.md  docker-compose.yml  requirements.txt
graph-service/src/: config.py  main.py
graph-service/src/api/: analysis.py  circuits.py  components.py  health.py  import_export.py  vehicles.py
graph-service/src/importers/: csv_importer.py  graphml_importer.py  json_importer.py  validation_service.py
graph-service/src/models/: __init__.py
graph-service/src/queries/: analytics_queries.py  circuit_queries.py  component_queries.py  optimization_queries.py  spatial_queries.py
graph-service/src/repositories/: analytics_repository.py  circuit_repository.py  component_repository.py  relationship_repository.py
graph-service/src/services/: analysis_service.py  graph_service.py  import_service.py  query_service.py  spatial_service.py  vehicle_service.py
graph-service/src/utils/: cypher_builder.py  data_validation.py  neo4j_utils.py  performance_utils.py
ingestion-service/: .env.example  .gitignore  Dockerfile  M2_SUMMARY.md  M3_SUMMARY.md  Makefile  OPEN_QUESTION.md  README-SETUP.md  README.md  claude.md  docker-compose.yml  pyproject.toml
ingestion-service/benchmarks/: run.py
ingestion-service/benchmarks/datasets/clean/: sample_schematic_1.json
ingestion-service/benchmarks/datasets/noisy/: noisy_scan_1.json
ingestion-service/docs/archive/milestones/: M4_SUMMARY.md  M5_SUMMARY.md
ingestion-service/fixtures/: README.md
ingestion-service/monitoring/: prometheus.yml
ingestion-service/scripts/: health-check.sh  run-dev.sh  setup-system.sh  start-direct.sh  start-local.sh  start-simple.sh
ingestion-service/src/: main.py
ingestion-service/src/api/: routes.py
ingestion-service/src/core/: health.py  logging.py  metrics.py  models.py  ocr_manager.py  pipeline.py  schemas.py  security.py  sentry.py
ingestion-service/src/evaluation/: __init__.py  benchmarks.py  cli.py  metrics.py  runner.py
ingestion-service/src/knowledge/: __init__.py  consolidation.py
ingestion-service/src/learning/: __init__.py  jobs.py  signals.py
ingestion-service/src/ocr/: base.py  deepseek.py  fusion.py  mistral.py  tesseract.py
ingestion-service/src/persist/: chunking.py  neo4j.py  qdrant.py  storage.py  supabase_metadata.py
ingestion-service/src/preprocess/: image.py  pdf.py
ingestion-service/src/schematics/: associate.py  detect.py  export.py  wires.py
ingestion-service/src/semantic/: __init__.py  embed.py  ontology.py  search.py
ingestion-service/src/workers/: processor.py  queue.py
ingestion-service/tests/: test_evaluation.py  test_observability_m5.py  test_ocr_m2.py  test_persistence_m4.py  test_schemas.py  test_schematic_m3.py
knowledge-scraper/: .env.example  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
knowledge-scraper/src/: __init__.py  main.py
knowledge-scraper/src/api/: __init__.py  scraper_routes.py
knowledge-scraper/src/core/: __init__.py  config.py  logging.py  schemas.py
knowledge-scraper/src/jobs/: __init__.py  queue.py
knowledge-scraper/src/models/: __init__.py
knowledge-scraper/src/scrapers/: __init__.py  base.py  forum.py  reddit.py  youtube.py
knowledge-scraper/src/services/: __init__.py  extraction.py  persistence.py
knowledge-scraper/tests/: __init__.py  test_reddit_scraper.py  test_schemas.py
learning-service/: ARCHITECTURE.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
learning-service/src/algorithms/feedback/: user_behavior.py
learning-service/src/algorithms/recognition/: component_detector.py  wire_tracer.py
learning-service/src/algorithms/spatial/: layout_scorer.py  placement_optimizer.py  routing_optimizer.py
learning-service/src/api/: optimization.py
learning-service/src/models/reinforcement/: placement_agent.py
learning-service/src/services/: optimization_service.py
learning-service/src/training/: experiment_runner.py
semantic-service/: .env.example  ARCHITECTURE.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
semantic-service/src/: main.py
semantic-service/src/api/: __init__.py  search_routes.py
semantic-service/src/config/: settings.py
semantic-service/src/core/: logging.py
semantic-service/src/models/: component_models.py  search_models.py
semantic-service/src/services/: documentation_service.py  embedding.py  recommendation_service.py  search_service.py  vector_store.py
(+35 files in other folders)
